Added ability to test 'key broadcasting' in test suite.'

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b821c3fa",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "6c1bc976",
    "metadata": {
     "scrolled": true
@@ -26,18 +26,71 @@
     {
      "data": {
       "text/plain": [
-       "Numpytainer([{'a': array([1, 2]), 'b': [array([2, 3])]}])"
+       "Numpytainer({'a': {'c': array([6, 1]), 'd': array([6, 1])}, 'b': [{'b': array([1, 1, 9])}, array([1, 1, 9])]})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# a = [{'a':(1,2), 'b':[(2,3)]}]\n",
-    "a = [{'a':(1,2), 'b':[(2,3)]}]\n",
-    "Numpytainer(a, greedy_array_conversion=True)"
+    "a = {'a':{'c':np.ones((3,2)), 'd':np.ones((2,3))}, 'b':[{'b':np.ones((3,3))}, np.ones((1,9,1))]}\n",
+    "b = {'a':(6,1), 'b':(1,1,9)} \n",
+    "A = Numpytainer(a)\n",
+    "B = Numpytainer(b)\n",
+    "A.reshape(B).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b4f7c60a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Numpytainer({'a': {'c': array([3, 2]), 'd': array([3, 2])}, 'b': [{'b': array([4, 4])}, array([4, 4])]})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {'a':{'c':np.ones((3,2)), 'd':np.ones((3,2))}, 'b':[{'b':np.ones((4,4))}, np.ones((4,4))]}\n",
+    "b = {'a':np.ones((3,1)), 'b':np.ones((1,4))}\n",
+    "A = Numpytainer(a)\n",
+    "B = Numpytainer(b)\n",
+    "(A + B).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c0338b48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Numpytainer({'a': {'c': array([3, 3]), 'd': array([3, 3])}, 'b': [{'b': array([4, 6])}, array([4, 6])]})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {'a':{'c':np.ones((3,2)), 'd':np.ones((3,2))}, 'b':[{'b':np.ones((4,4))}, np.ones((4,4))]}\n",
+    "b = {'a':np.ones((2,3)), 'b':np.ones((4,6))}\n",
+    "A = Numpytainer(a)\n",
+    "B = Numpytainer(b)\n",
+    "(A @ B).shape"
    ]
   },
   {
