Added apply method, which allows arbitrary functions to be applied to each array in an arraytainer.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b821c3fa",
    "metadata": {},
    "outputs": [],
@@ -21,22 +21,33 @@
    "execution_count": 7,
    "id": "75315bff",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'a':[[np.ones((2,2))]], 'b':[np.ones([3,3])]}\n",
+    "A = Numpytainer(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7090d2a3",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2])"
+       "array([[0.87395785, 0.97858888],\n",
+       "       [0.38160176, 0.07011059]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = {'a':[[np.array([2,2])]], 'b':[np.array([3,3])]}\n",
-    "A = Numpytainer(a)\n",
-    "A.get(('a',0,0))"
+    "A.shape.apply(l)\n",
+    "np.random.rand(*np.array([2,2]).tolist())"
    ]
   },
   {
