Updated apply method to allow for more generalised broadcasting.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "75315bff",
    "metadata": {},
    "outputs": [],
@@ -29,20 +29,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "f956c65d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b = {'a':{'e':{'c':np.ones((2,2))}}, 'b':{'e':{'d':np.ones([3,3])}}}\n",
+    "b = {'a':{'c':np.ones((2,2))}, 'b':{'d':np.ones([3,3])}}\n",
+    "B = Numpytainer(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
-   "id": "7090d2a3",
+   "id": "cbb00fac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.87395785, 0.97858888],\n",
-       "       [0.38160176, 0.07011059]])"
+       "Numpytainer({'a': {'c': array([[2., 2.],\n",
+       "       [2., 2.]])}, 'b': {'d': array([[3., 3., 3.],\n",
+       "       [3., 3., 3.],\n",
+       "       [3., 3., 3.]])}})"
       ]
      },
      "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = {'c':2, 'd':3}\n",
+    "C = Numpytainer(c)\n",
+    "B.apply(lambda x,y: y*x, skip_level=1, args=(C,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7090d2a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'l' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4429/3023891054.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'l' is not defined"
+     ]
     }
    ],
    "source": [
