Fixed composition issues (i.e. arraytainer of an arraytainer now returns the same arraytainer); add test to test suite to detect this issue in future.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -19,12 +19,75 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ee01b3d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpytainer({'a': array([[1., 1.],\n",
+      "       [1., 1.]]), 'b': array([[1., 1., 1.],\n",
+      "       [1., 1., 1.],\n",
+      "       [1., 1., 1.]])})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Numpytainer({'a': [array([[1., 1.],\n",
+       "       [1., 1.]])], 'b': [array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])]})"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {'a':np.ones((2,2)), 'b':np.ones([3,3])}\n",
+    "A = Numpytainer(a)\n",
+    "print(A)\n",
+    "Numpytainer(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "75315bff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpytainer({'a': array([[1., 1.],\n",
+      "       [1., 1.]]), 'b': array([[1., 1., 1.],\n",
+      "       [1., 1., 1.],\n",
+      "       [1., 1., 1.]])})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Numpytainer({'a': [array([[1., 1.],\n",
+       "       [1., 1.]])], 'b': [array([[1., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [1., 1., 1.]])]})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = {'a':[[np.ones((2,2))]], 'b':[np.ones([3,3])]}\n",
-    "A = Numpytainer(a)"
+    "a = {'a':np.ones((2,2)), 'b':np.ones([3,3])}\n",
+    "A = Numpytainer(a)\n",
+    "print(A)\n",
+    "Numpytainer(A)"
    ]
   },
   {
