Fixed bug associated with passing kwargs to Numpy functions; added test_mean test case to detect this bug in future.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -26,19 +26,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numpytainer({'a': array([[1., 1.],\n",
-      "       [1., 1.]]), 'b': array([[1., 1., 1.],\n",
-      "       [1., 1., 1.],\n",
-      "       [1., 1., 1.]])})\n"
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Numpytainer({'a': [array([[1., 1.],\n",
-       "       [1., 1.]])], 'b': [array([[1., 1., 1.],\n",
-       "       [1., 1., 1.],\n",
-       "       [1., 1., 1.]])]})"
+       "Numpytainer([array([[[0.70243648, 0.2219903 ],\n",
+       "        [0.47691692, 0.41376731],\n",
+       "        [0.14103975, 0.27181265]],\n",
+       "\n",
+       "       [[0.74989981, 0.39445969],\n",
+       "        [0.24569473, 0.56691578],\n",
+       "        [0.86682132, 0.72018963]]]), [array([[0.89078148],\n",
+       "       [0.73559349]]), array([[0.33713298, 0.94460923],\n",
+       "       [0.82847369, 0.70393176]])]])"
       ]
      },
      "execution_count": 2,
@@ -47,10 +52,31 @@
     }
    ],
    "source": [
-    "a = {'a':np.ones((2,2)), 'b':np.ones([3,3])}\n",
+    "a =  [np.random.rand(2,3,2),[np.random.rand(2,1),np.random.rand(2,2)]] #{'a':2*np.random.rand(2,2), 'b':3*np.random.rand(3,3)}\n",
     "A = Numpytainer(a)\n",
-    "print(A)\n",
-    "Numpytainer(A)"
+    "np.mean(A, axis=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bcf6ffbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.68447637, 0.84237164],\n",
+       "       [0.67391925, 0.29262638]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(np.random.rand(2,3,2), axis=1)"
    ]
   },
   {
