Changed behaviour of flatten method; added ability to create arraytainers from flat vectors; fixed bug in contents array conversions + added test to identify bug.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -10,80 +10,31 @@
     "from arraytainers import Numpytainer, Jaxtainer\n",
     "import numpy as np\n",
     "from numpy import array\n",
+    "import jax\n",
     "import jax.numpy as jnp\n",
     "import functools\n",
-    "from jax.numpy import DeviceArray\n",
-    "import operator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bb65f74f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expected = [array([[3.74540119, 9.50714306, 7.31993942],\n",
-    "       [5.98658484, 1.5601864 , 1.5599452 ]]), array([[8.32442641, 2.12339111],\n",
-    "       [1.81824967, 1.8340451 ]]), [array([[3.04242243],\n",
-    "       [5.24756432]]), [array([[4.31945019, 2.9122914 ],\n",
-    "       [6.11852895, 1.39493861]]), array([[2.92144649, 3.66361843],\n",
-    "       [4.56069984, 7.85175961],\n",
-    "       [1.99673782, 5.14234438]])]]]"
+    "from jax.numpy import DeviceArray"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3511216e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numpytainer([[array([2, 3]), array([3, 2])], array([2, 2]), [array([2, 1]), [array([2, 2]), array([3, 2])]]])\n",
-      "Numpytainer([array([2, 3]), array([2, 2]), [array([2, 1]), [array([2, 2]), array([3, 2])]]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = Numpytainer([[np.random.rand(2,3),np.random.rand(3,2)],np.random.rand(2,2),[np.random.rand(2,1),[np.random.rand(2,2),np.random.rand(3,2)]]])\n",
-    "print(A.shape)\n",
-    "b = np.random.rand(2,3)\n",
-    "A.set(b, 0)\n",
-    "print(A.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f81a1f32",
+   "id": "bd09052c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Numpytainer([array([2, 3]), array([2, 2]), [array([2, 1]), [array([2, 2]), array([3, 2])]]])"
+       "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Numpytainer(expected).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "bd09052c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Numpytainer([[array([[3.74540119, 9.50714306, 7.31993942],\n",
+    "a = Jaxtainer([[array([[3.74540119, 9.50714306, 7.31993942],\n",
     "       [5.98658484, 1.5601864 , 1.5599452 ]]), array([[0.58083612, 8.66176146],\n",
     "       [6.01115012, 7.08072578],\n",
     "       [0.20584494, 9.69909852]])], array([[8.32442641, 2.12339111],\n",
@@ -92,43 +43,85 @@
     "       [6.11852895, 1.39493861]]), array([[2.92144649, 3.66361843],\n",
     "       [4.56069984, 7.85175961],\n",
     "       [1.99673782, 5.14234438]])]]])\n",
-    "b = Numpytainer([array([[3.74540119, 9.50714306, 7.31993942],\n",
-    "       [5.98658484, 1.5601864 , 1.5599452 ]])])\n",
-    "c = (0,1)"
+    "A = Jaxtainer.from_vector(a.flatten(), a.shape, order='F')\n",
+    "(A == a).all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5e2481dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.set(b, *c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "2474cb8f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Numpytainer([array([[3.74540119, 9.50714306, 7.31993942],\n",
-       "       [5.98658484, 1.5601864 , 1.5599452 ]]), [array([[3.74540119, 9.50714306, 7.31993942],\n",
-       "       [5.98658484, 1.5601864 , 1.5599452 ]])]])"
+       "array([3.74540119, 9.50714306, 7.31993942, 5.98658484, 1.5601864 ,\n",
+       "       1.5599452 , 0.58083612, 8.66176146, 6.01115012, 7.08072578,\n",
+       "       0.20584494, 9.69909852, 8.32442641, 2.12339111, 1.81824967,\n",
+       "       1.8340451 , 3.04242243, 5.24756432, 4.31945019, 2.9122914 ,\n",
+       "       6.11852895, 1.39493861, 2.92144649, 3.66361843, 4.56069984,\n",
+       "       7.85175961, 1.99673782, 5.14234438])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[0]"
+    "a.flatten()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "12c02c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Jaxtainer([[DeviceArray([[3.7454011, 9.507143 , 7.3199396],\n",
+       "             [5.9865847, 1.5601864, 1.5599452]], dtype=float32), DeviceArray([[0.5808361 , 8.661761  ],\n",
+       "             [6.01115   , 7.0807257 ],\n",
+       "             [0.20584494, 9.699099  ]], dtype=float32)], array([[8.32442665, 2.12339115],\n",
+       "       [1.8182497 , 1.83404505]]), [DeviceArray([[3.0424225],\n",
+       "             [5.2475643]], dtype=float32), [DeviceArray([[4.3194504, 2.9122913],\n",
+       "             [6.118529 , 1.3949386]], dtype=float32), DeviceArray([[2.9214466, 3.6636183],\n",
+       "             [4.5607   , 7.8517594],\n",
+       "             [1.9967378, 5.1423445]], dtype=float32)]]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6d7d6d3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -711,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
